--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,9 +1,818 @@
-@use "sidebar";
-@use "homePage";
-@use "footer";
-@use "favouriteList";
-@use "popularPage";
-@use "trendingPage";
+.nav-menu {
+  font-family: "Encode Sans", sans-serif;
+  background-color: #FDF7F9;
+  position: fixed;
+  width: 220px;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.nav-menu .logo {
+  padding: 2.4em;
+}
+
+.profile {
+  text-align: center;
+}
+.profile .profile-avatar {
+  width: 3.8rem;
+}
+.profile .profile-name {
+  margin-bottom: 0.3em;
+  font-size: 1.15rem;
+  font-weight: 600;
+}
+.profile .profile-username {
+  color: #787682;
+  font-size: 0.6rem;
+  margin: 0;
+}
+
+.nav-list {
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: 14px;
+}
+.nav-list ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: left;
+}
+.nav-list .browse {
+  font-weight: 600;
+  margin-bottom: 2em;
+  padding-left: 2.8em;
+}
+.nav-list .section {
+  margin: 0;
+}
+
+.nav-text {
+  height: 2.3rem;
+}
+.nav-text .link {
+  text-decoration: none;
+  color: #787682;
+  border-left: 5px solid #FDF7F9;
+  padding: 0.4em 0 0.4em 2.9em;
+}
+.nav-text .link:hover,
+.nav-text .link:focus {
+  color: #BA0D3E;
+  font-weight: 700;
+}
+.nav-text .active-link {
+  text-decoration: none;
+  color: #BA0D3E;
+  font-weight: 700;
+  border-left: 5px solid #BA0D3E;
+  padding: 0.4em 0 0.4em 2.9em;
+}
+
+.icon {
+  width: 20px;
+  padding-right: 1em;
+  font-size: 1rem;
+}
+
+.open {
+  display: none;
+  position: absolute;
+  position: fixed;
+  background-color: transparent;
+  border: none;
+  font-size: 1.5rem;
+  color: #BA0D3E;
+  top: 6%;
+  left: 5%;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .nav-menu {
+    position: absolute;
+    left: -200%;
+    transition: 1s;
+  }
+  .nav-menu .open {
+    display: block;
+    z-index: 10;
+  }
+  .nav-menu .fa-times {
+    position: absolute;
+  }
+
+  .nav-menu-active {
+    left: 0%;
+    transition: 3s;
+    position: -webkit-sticky;
+    position: sticky;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .profile-avatar {
+    margin-top: 5rem;
+  }
+
+  .overflow {
+    overflow-y: hidden;
+  }
+}
+.margin-container {
+  margin: 0 0 0 220px;
+  padding: 4.4em 7em 4.4em 5em;
+}
+.margin-container .home-column {
+  display: flex;
+}
+.margin-container .home-row-one {
+  width: 63%;
+  margin-right: 5rem;
+}
+.margin-container .home-row-two {
+  width: 40%;
+}
+
+.greeting {
+  margin: 0;
+  font-family: "Encode Sans", sans-serif;
+}
+.greeting .greeting-text {
+  margin: 0;
+  font-weight: 500;
+  font-size: 2rem;
+}
+.greeting .greeting-sub {
+  margin: 0;
+}
+
+.banner-container {
+  width: 100%;
+  position: relative;
+}
+
+.banner-movie {
+  width: 100%;
+  height: 13rem;
+  object-fit: cover;
+  margin: 3em 0 1em 0;
+  border-radius: 20px;
+}
+
+.banner-info {
+  position: absolute;
+  top: 52%;
+  left: 5%;
+  max-width: 92%;
+}
+.banner-info p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin: 0;
+  color: #fff;
+  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.73);
+}
+.banner-info .banner-info-title {
+  margin-bottom: 0.4rem;
+  font-family: "Encode Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.result-detail-link {
+  text-decoration: none;
+  color: #000000;
+}
+
+@media (max-width: 768px) {
+  .margin-container {
+    margin: 0;
+    padding: 5em 2.4em;
+  }
+}
+.home-popular .list-title,
+.home-trending .list-title {
+  display: flex;
+  align-items: flex-end;
+  margin: 1rem 0;
+}
+.home-popular .list-title h2,
+.home-trending .list-title h2 {
+  flex-grow: 0.1;
+  margin: 0;
+}
+.home-popular .list-title .list-title-front,
+.home-trending .list-title .list-title-front {
+  display: flex;
+  align-items: center;
+  align-items: flex-end;
+  flex-grow: 2;
+}
+.home-popular .list-title .list-title-front button,
+.home-trending .list-title .list-title-front button {
+  font-family: "Encode Sans", sans-serif;
+  font-size: 0.9rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 5rem;
+}
+.home-popular .list-title .list-title-front button:hover,
+.home-trending .list-title .list-title-front button:hover {
+  color: #BA0D3E;
+  font-weight: 700;
+}
+.home-popular .list-title .list-title-front .active,
+.home-trending .list-title .list-title-front .active {
+  color: #BA0D3E;
+  font-weight: 700;
+}
+.home-popular .list-title .see-more,
+.home-trending .list-title .see-more {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding-left: 1rem;
+}
+.home-popular .list-title .see-more:hover,
+.home-trending .list-title .see-more:hover {
+  color: #BA0D3E;
+  background-color: #BA0D3E;
+  background-color: #FDF7F9;
+}
+.home-popular .list-title i,
+.home-trending .list-title i {
+  margin-left: 0.5rem;
+  font-size: 0.05em;
+}
+
+.pagination {
+  display: none;
+}
+
+.home-popular .popular-list .result-card-date {
+  display: none;
+}
+.home-popular .popular-list .result-card-img {
+  width: 9rem;
+  height: 13.5rem;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.home-popular .popular-list .result-card-bar {
+  justify-content: space-around;
+}
+.home-popular .popular-list .result-card-info {
+  width: 6rem;
+}
+.home-popular .popular-list .go-back-btn {
+  display: none;
+}
+
+.home-trending .trending-list {
+  margin-top: 2em;
+}
+.home-trending .trending-list .result-card-vote {
+  display: none;
+}
+.home-trending .trending-list .result-card-img {
+  width: 13rem;
+  height: 9rem;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.home-trending .trending-list .result-card-bar {
+  justify-content: space-between;
+}
+.home-trending .trending-list .result-card-info {
+  width: 10rem;
+}
+.home-trending .trending-list .trending-type-btn {
+  display: none;
+}
+.home-trending .trending-list .go-back-btn {
+  display: none;
+}
+
+.home-popular .popular-list .result-list,
+.home-trending .trending-list .result-list {
+  display: flex;
+  padding-left: 1.4em;
+  overflow-x: scroll;
+}
+.home-popular .popular-list ::-webkit-scrollbar,
+.home-trending .trending-list ::-webkit-scrollbar {
+  height: 7px;
+  background-color: #FDF7F9;
+}
+.home-popular .popular-list ::-webkit-scrollbar-track,
+.home-trending .trending-list ::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #FDF7F9;
+}
+.home-popular .popular-list ::-webkit-scrollbar-thumb,
+.home-trending .trending-list ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #F2CFDA;
+}
+.home-popular .popular-list .result-card,
+.home-trending .trending-list .result-card {
+  margin: 1em;
+}
+.home-popular .popular-list .result-card:first-child,
+.home-trending .trending-list .result-card:first-child {
+  margin-left: 0;
+}
+.home-popular .popular-list .result-card-bar,
+.home-trending .trending-list .result-card-bar {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 0.5em;
+}
+.home-popular .popular-list .result-card-img:hover,
+.home-trending .trending-list .result-card-img:hover {
+  box-shadow: 0px 0px 20px rgba(186, 13, 62, 0.4);
+}
+.home-popular .popular-list .result-list .result-card,
+.home-trending .trending-list .result-list .result-card {
+  margin-bottom: 2em;
+}
+.home-popular .popular-list .result-list .result-card-info p,
+.home-trending .trending-list .result-list .result-card-info p {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.home-popular .popular-list .result-list .result-card-info .result-card-title,
+.home-trending .trending-list .result-list .result-card-info .result-card-title {
+  font-size: 1rem;
+  font-weight: bold;
+}
+.home-popular .popular-list .result-list .result-card-info .result-card-vote,
+.home-popular .popular-list .result-list .result-card-info .result-card-date,
+.home-trending .trending-list .result-list .result-card-info .result-card-vote,
+.home-trending .trending-list .result-list .result-card-info .result-card-date {
+  font-size: 0.8rem;
+  margin-top: 0.4em;
+}
+.home-popular .popular-list .result-list .result-card-info .result-card-vote i,
+.home-popular .popular-list .result-list .result-card-info .result-card-date i,
+.home-trending .trending-list .result-list .result-card-info .result-card-vote i,
+.home-trending .trending-list .result-list .result-card-info .result-card-date i {
+  color: #F3F82A;
+  margin-right: 0.3em;
+}
+
+.fav-btn {
+  font-size: 1rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.result-card .fa-heart {
+  color: #BA0D3E;
+}
+
+.fade {
+  position: relative;
+}
+
+.fade::after {
+  content: "";
+  width: 40px;
+  height: 90%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  will-change: opacity;
+  pointer-events: none;
+  transition: linear 0.3s;
+  opacity: 1;
+}
+
+.up-comming-list {
+  width: 100%;
+  font-size: 0.9rem;
+}
+.up-comming-list img,
+.up-comming-list .result-card-vote,
+.up-comming-list .result-card-date {
+  display: none;
+}
+.up-comming-list .result-list {
+  background-color: #FDF7F9;
+  border-radius: 20px 0 0 20px;
+  padding: 1.5em;
+  max-height: 37rem;
+  overflow: auto;
+}
+.up-comming-list ::-webkit-scrollbar {
+  width: 7px;
+  background-color: #FDF7F9;
+}
+.up-comming-list ::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #FDF7F9;
+}
+.up-comming-list ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #F2CFDA;
+}
+
+.up-comming-list-item {
+  display: flex;
+  margin: 0.5em 0;
+}
+.up-comming-list-item p {
+  margin: 0.5em 1em;
+}
+.up-comming-list-item .index {
+  width: 1.8rem;
+  text-align: left;
+}
+.up-comming-list-item .index-red {
+  color: #BA0D3E;
+  font-weight: bold;
+}
+.up-comming-list-item .result-card {
+  width: 100%;
+}
+.up-comming-list-item .result-card-bar {
+  display: flex;
+  justify-content: space-between;
+}
+.up-comming-list-item .result-card-info {
+  width: 80%;
+}
+.up-comming-list-item .result-card-title {
+  margin: 0.5em 0;
+}
+
+.up-comming-list-item:hover {
+  background-color: #fff;
+  box-shadow: 0px 0px 19px rgba(186, 13, 62, 0.19);
+  border-radius: 8px;
+}
+
+.up-comming-list-item:first-child {
+  margin-top: 0;
+}
+
+@media (max-width: 992px) {
+  .margin-container .home-column {
+    display: block;
+  }
+  .margin-container .home-row-one,
+.margin-container .home-row-two {
+    width: 100%;
+  }
+}
+.latest-trailer-list {
+  margin-top: 2em;
+}
+.latest-trailer-list ::-webkit-scrollbar {
+  height: 7px;
+  background-color: #FDF7F9;
+}
+.latest-trailer-list ::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #FDF7F9;
+}
+.latest-trailer-list ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #F2CFDA;
+}
+
+.video-list {
+  display: flex;
+  max-width: 100%;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  background-color: #FDF7F9;
+  padding: 2em 1.2em;
+}
+
+.video-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.video-item p {
+  margin: 0.1em;
+}
+.video-item .btn-primary {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 13rem;
+  height: 9rem;
+}
+.video-item .btn-primary img {
+  width: 11.5rem;
+  height: 8rem;
+  border-radius: 12px;
+  object-fit: cover;
+  transition: 0.3s;
+}
+.video-item .btn-primary .play-overlay {
+  position: absolute;
+  top: 2%;
+  left: 4%;
+  width: 12rem;
+  height: 8.3rem;
+  font-size: 2rem;
+  border-radius: 12px;
+  color: #fff;
+  background-color: #000000;
+  opacity: 0;
+  transition: opacity 0.2s, visibility 0.2s;
+}
+.video-item .btn-primary .fa-play-circle {
+  position: absolute;
+  top: 38%;
+  left: 43%;
+}
+
+.video-info-title {
+  font-weight: bold;
+  font-size: 0.8rem;
+  margin-top: 0.4em;
+}
+
+.video-info-date {
+  font-size: 0.4rem;
+}
+
+.img-wrap:hover img {
+  width: 12rem;
+  height: 8.3rem;
+  transition: 0.3s;
+}
+.img-wrap:hover .play-overlay {
+  visibility: visible;
+  opacity: 0.7;
+  transition: 0.3s;
+}
+.img-wrap:hover .fa-play-circle {
+  visibility: visible;
+  opacity: 1;
+}
+
+footer {
+  font-family: "Encode Sans", sans-serif;
+  margin: 0 0 0 220px;
+  padding: 4.5rem 0 2rem 0;
+  background-color: #FDF7F9;
+  text-align: center;
+}
+footer p {
+  font-size: 0.1em;
+  margin-top: 3rem;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.grid {
+  font-family: "Encode Sans", sans-serif;
+  font-size: 0.8rem;
+  display: flex;
+  min-width: 10rem;
+}
+.grid .footer-head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 16rem;
+}
+.grid a {
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
+  font-weight: 500;
+}
+.grid a:hover {
+  color: #BA0D3E;
+}
+.grid .column {
+  min-width: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.grid .footer-info {
+  display: flex;
+  justify-content: space-around;
+}
+.grid .one {
+  display: flex;
+  align-items: center;
+  min-width: 16rem;
+}
+
+.social-icon {
+  font-size: 1rem;
+  margin: 0.5em 0 0 0;
+  display: flex;
+}
+
+.fa-google,
+.fa-facebook-f,
+.fa-twitter {
+  color: #BA0D3E;
+  border: 1px solid transparent;
+  border-radius: 20px;
+}
+
+.fa-google {
+  margin: 0 0.3em 0 0;
+  padding: 0.3em;
+}
+
+.fa-facebook-f {
+  margin: 0 0.3em;
+  padding: 0.31em 0.5em;
+}
+
+.fa-twitter {
+  margin: 0 0.3em;
+  padding: 0.3em;
+}
+
+.fa-google:hover,
+.fa-facebook-f:hover,
+.fa-twitter:hover {
+  background-color: #BA0D3E;
+  color: #fff;
+  border: 1px solid #BA0D3E;
+}
+
+@media (max-width: 768px) {
+  footer {
+    margin-left: 0;
+  }
+
+  .grid {
+    flex-direction: column;
+  }
+
+  .footer-info {
+    margin-top: 1rem;
+  }
+
+  .column {
+    align-items: center;
+  }
+}
+@media (max-width: 992px) {
+  footer .grid {
+    align-items: center;
+  }
+  footer .footer-info {
+    flex-direction: column;
+    text-align: left;
+  }
+  footer .column {
+    margin: 0.3rem;
+  }
+}
+.favourite-page .page-list-title-front,
+.popular-page .page-list-title-front,
+.search-page .page-list-title-front,
+.top-rated-page .page-list-title-front,
+.person-page .page-list-title-front,
+.trending-tv-page .page-list-title-front,
+.trending-movie-page .page-list-title-front {
+  display: flex;
+  align-items: center;
+  align-items: flex-end;
+  flex-grow: 2;
+  margin: 2rem 0;
+  font-family: "Encode Sans", sans-serif;
+}
+.favourite-page .page-list-title-front .page-title,
+.popular-page .page-list-title-front .page-title,
+.search-page .page-list-title-front .page-title,
+.top-rated-page .page-list-title-front .page-title,
+.person-page .page-list-title-front .page-title,
+.trending-tv-page .page-list-title-front .page-title,
+.trending-movie-page .page-list-title-front .page-title {
+  font-size: 1.5rem;
+  font-weight: 400;
+  flex-grow: 0.1;
+  margin: 0;
+}
+.favourite-page .page-list-title-front button,
+.popular-page .page-list-title-front button,
+.search-page .page-list-title-front button,
+.top-rated-page .page-list-title-front button,
+.person-page .page-list-title-front button,
+.trending-tv-page .page-list-title-front button,
+.trending-movie-page .page-list-title-front button {
+  font-family: inherit;
+  font-size: 0.9rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 5rem;
+}
+.favourite-page .page-list-title-front button[text],
+.popular-page .page-list-title-front button[text],
+.search-page .page-list-title-front button[text],
+.top-rated-page .page-list-title-front button[text],
+.person-page .page-list-title-front button[text],
+.trending-tv-page .page-list-title-front button[text],
+.trending-movie-page .page-list-title-front button[text] {
+  font-family: "Encode Sans", sans-serif;
+}
+.favourite-page .page-list-title-front button:hover,
+.popular-page .page-list-title-front button:hover,
+.search-page .page-list-title-front button:hover,
+.top-rated-page .page-list-title-front button:hover,
+.person-page .page-list-title-front button:hover,
+.trending-tv-page .page-list-title-front button:hover,
+.trending-movie-page .page-list-title-front button:hover {
+  color: #BA0D3E;
+  font-weight: 700;
+}
+.favourite-page .page-list-title-front .active,
+.popular-page .page-list-title-front .active,
+.search-page .page-list-title-front .active,
+.top-rated-page .page-list-title-front .active,
+.person-page .page-list-title-front .active,
+.trending-tv-page .page-list-title-front .active,
+.trending-movie-page .page-list-title-front .active {
+  color: #BA0D3E;
+  font-weight: 700;
+}
+.favourite-page .page-list-title-front .all-btn,
+.popular-page .page-list-title-front .all-btn,
+.search-page .page-list-title-front .all-btn,
+.top-rated-page .page-list-title-front .all-btn,
+.person-page .page-list-title-front .all-btn,
+.trending-tv-page .page-list-title-front .all-btn,
+.trending-movie-page .page-list-title-front .all-btn {
+  width: 3rem;
+}
+
+.go-back-btn {
+  font-family: inherit;
+  font-size: 0.9rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.go-back-btn i {
+  margin-right: 10px;
+}
+
+.go-back-btn:hover {
+  color: #BA0D3E;
+}
+
+.favourite-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3rem;
+  row-gap: 3rem;
+}
+
+.favourite-list-item {
+  width: 100%;
+  display: flex;
+}
+.favourite-list-item img {
+  width: 9rem;
+  height: 13.5rem;
+  object-fit: cover;
+}
+
+.popular-page .see-more {
+  display: none;
+}
+
+.trending-movie-page .see-more {
+  display: none;
+}
+
 body {
   font: 100% Roboto, sans-serif;
   color: black;
@@ -15,48 +824,38 @@ body {
 .columns .is-12 {
   width: 10%;
 }
-
 .columns .is-11 {
   width: 11%;
 }
-
 .columns .is-10 {
   width: 12%;
 }
-
 .columns .is-9 {
   width: 13%;
 }
-
 .columns .is-8 {
   width: 13%;
 }
-
 .columns .is-7 {
   width: 13%;
 }
-
 .columns .is-6 {
   width: 13%;
 }
-
 .columns .is-5 {
   width: 25%;
 }
-
 .columns .is-4 {
   width: 30%;
 }
-
 .columns .is-3 {
   width: 40%;
 }
-
 .columns .is-2 {
   width: 50%;
 }
-
 .columns .is-1 {
   width: 100%;
 }
+
 /*# sourceMappingURL=index.css.map */
